--- a/story.html
+++ b/story.html
@@ -3,46 +3,43 @@
 <head>
 <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Surpresa — Nossa História</title>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Playfair+Display:wght@400;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Playfair+Display:wght@400;600;700&display=swap" rel="stylesheet">
 <style>
-:root{--accent:#b93a3a;--gold:#c99b3f;--muted:#6b6b6b;--ink:#222}
-body{margin:0;font-family:Inter,Arial;background:linear-gradient(180deg,#fff7f4,#fdeeea);color:var(--ink)}
-.container{max-width:900px;margin:28px auto;padding:18px}
-.header{display:flex;align-items:center;justify-content:space-between;gap:12px}
-.title{font-family:Playfair Display;font-size:28px;margin:0}
-.lead{color:var(--muted);margin:6px 0 18px}
-.card{background:white;padding:18px;border-radius:12px;box-shadow:0 18px 40px rgba(0,0,0,0.06)}
-.photo-row{display:flex;gap:12px;margin-top:12px;flex-wrap:wrap}
+:root{--wine:#6b0f1a;--muted:#6b5950;--gold:#c9a44a}
+body{margin:0;font-family:Playfair Display,serif;background:linear-gradient(180deg,#efe7dc,#f6efe8);color:#221a17}
+.container{max-width:980px;margin:28px auto;padding:22px}
+.header{display:flex;justify-content:space-between;align-items:center}
+h1{margin:0;color:var(--wine);font-family:Cinzel,serif}
+.card{background:#fff8ef;padding:20px;border-radius:12px;border:1px solid rgba(0,0,0,0.04);box-shadow:0 18px 40px rgba(0,0,0,0.06)}
+.lead{color:var(--muted)}
+.signature{margin-top:18px;text-align:right;color:var(--wine);font-weight:700}
+.photo-row{display:flex;gap:12px;margin-top:14px;flex-wrap:wrap}
 .photo-row img{width:48%;border-radius:10px;object-fit:cover}
 @media(max-width:700px){.photo-row img{width:100%}}
 </style>
 </head>
 <body>
 <div class="container">
-  <header class="header">
+  <div class="header">
     <div>
-      <h1 class="title">A Nossa Jornada</h1>
-      <p class="lead">Aqui fica a sua carta — cola o texto que você escreveu.</p>
+      <h1>A Nossa Jornada</h1>
+      <p class="lead">Cole sua carta abaixo — o lugar perfeito para emocionar (e zoar).</p>
     </div>
     <div><button onclick="location.href='index.html'">← Voltar ao mapa</button></div>
-  </header>
+  </div>
 
-  <main>
-    <div class="card">
-      <div id="carta">
-        <!-- COLE SUA CARTA AQUI -->
-        <p style="margin:0;color:var(--muted)">[Cole sua carta/emocional text aqui — você pode colar parágrafos e fotos]</p>
-      </div>
+  <div class="card" id="carta">
+    <!-- Cole sua carta aqui -->
+    <p style="margin:0;color:var(--muted)">[Cole sua carta aqui — formate com parágrafos. Você pode adicionar fotos abaixo.]</p>
+  </div>
+
+  <section style="margin-top:18px">
+    <h3 style="font-family:Cinzel,serif;color:var(--wine);margin:0 0 8px">Alguns momentos</h3>
+    <div class="photo-row">
+      <img src="assets/photo1.jpg" alt="momento1">
+      <img src="assets/photo2.jpg" alt="momento2">
     </div>
-
-    <section style="margin-top:18px">
-      <h3 style="font-family:Playfair Display;margin:0 0 8px">Alguns momentos</h3>
-      <div class="photo-row">
-        <img src="assets/photo1.jpg" alt="momento1">
-        <img src="assets/photo2.jpg" alt="momento2">
-      </div>
-    </section>
-  </main>
+  </section>
 </div>
 </body>
 </html>
