--- a/gallery.html
+++ b/gallery.html
@@ -3,19 +3,19 @@
 <head>
 <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Surpresa — Fotos</title>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Playfair+Display:wght@400;600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&display=swap" rel="stylesheet">
 <style>
-body{margin:0;font-family:Inter;background:linear-gradient(180deg,#fff7f4,#fdeeea);color:#222}
-.wrap{max-width:980px;margin:28px auto;padding:18px}
-.header{display:flex;align-items:center;justify-content:space-between}
-h1{font-family:Playfair Display;margin:0}
-.carousel{position:relative;margin-top:18px;height:64vh;min-height:360px;border-radius:12px;overflow:hidden;box-shadow:0 20px 48px rgba(0,0,0,0.08)}
-.carousel img{width:100%;height:100%;object-fit:cover;display:block}
-.controls{display:flex;gap:8px;margin-top:12px}
-.thumb{width:84px;height:56px;border-radius:8px;overflow:hidden;cursor:pointer;border:3px solid transparent}
+body{margin:0;font-family:Playfair Display,serif;background:linear-gradient(180deg,#efe7dc,#f6efe8);color:#221a17}
+.wrap{max-width:1000px;margin:28px auto;padding:18px}
+.header{display:flex;justify-content:space-between;align-items:center}
+h1{margin:0;color:#6b0f1a;font-family:Cinzel,serif}
+.carousel{margin-top:18px;border-radius:12px;overflow:hidden;box-shadow:0 20px 48px rgba(0,0,0,0.08);background:#fff8ef}
+.carousel img{width:100%;height:60vh;object-fit:cover;display:block}
+.thumbs{display:flex;gap:8px;margin-top:12px}
+.thumb{width:110px;height:72px;border-radius:8px;overflow:hidden;border:3px solid transparent;cursor:pointer}
 .thumb img{width:100%;height:100%;object-fit:cover}
-.thumb.active{border-color:#b93a3a}
-@media(max-width:700px){.thumb{width:64px;height:48px}}
+.thumb.active{border-color:#6b0f1a}
+@media(max-width:700px){.thumb{width:72px;height:48px}}
 </style>
 </head>
 <body>
@@ -29,7 +29,7 @@ h1{font-family:Playfair Display;margin:0}
     <img src="assets/photo1.jpg" alt="slide">
   </div>
 
-  <div class="controls" id="thumbs">
+  <div class="thumbs" id="thumbs">
     <div class="thumb active" data-src="assets/photo1.jpg"><img src="assets/photo1.jpg"></div>
     <div class="thumb" data-src="assets/photo2.jpg"><img src="assets/photo2.jpg"></div>
     <div class="thumb" data-src="assets/photo3.jpg"><img src="assets/photo3.jpg"></div>
@@ -47,12 +47,8 @@ thumbs.forEach(t=>{
     t.classList.add('active');
   });
 });
-// auto rotate
 let idx=0;
-setInterval(()=>{
-  idx = (idx+1) % thumbs.length;
-  thumbs[idx].click();
-}, 4200);
+setInterval(()=>{ idx=(idx+1)%thumbs.length; thumbs[idx].click(); },4200);
 </script>
 </body>
 </html>
