--- a/declaration.html
+++ b/declaration.html
@@ -2,23 +2,21 @@
 <html lang="pt-BR">
 <head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Surpresa — Declaração</title>
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Playfair+Display:wght@400;600;700&display=swap" rel="stylesheet">
 <style>
-body{margin:0;font-family:Inter;background:linear-gradient(180deg,#fff7f4,#fdeeea);color:#222}
-.container{max-width:900px;margin:28px auto;padding:18px}
-h1{font-family:Playfair Display;font-size:28px}
-.card{background:white;padding:28px;border-radius:14px;box-shadow:0 20px 48px rgba(0,0,0,0.08)}
-.signature{margin-top:18px;text-align:right;color:#b93a3a;font-weight:700}
+body{margin:0;font-family:Playfair Display,serif;background:linear-gradient(180deg,#efe7dc,#f6efe8);color:#221a17}
+.container{max-width:820px;margin:48px auto;padding:18px;text-align:center}
+h1{font-family:Cinzel,serif;color:#6b0f1a}
+.card{background:#fff8ef;padding:28px;border-radius:14px;box-shadow:0 20px 48px rgba(0,0,0,0.08)}
+.signature{margin-top:18px;color:#6b0f1a;font-weight:700}
 </style>
 </head>
 <body>
 <div class="container">
-  <button onclick="location.href='index.html'">← Voltar</button>
+  <button onclick="location.href='index.html'">← Voltar ao mapa</button>
   <h1>Declaração</h1>
-
   <div class="card">
-    <p style="margin:0;color:#6b6b6b">[Espaço para a sua declaração emocionante — cole seu texto aqui.]</p>
-
+    <p style="margin:0;color:#6b5950">[Espaço para a sua declaração — cole aqui seu texto emocionante e engraçado, do jeitinho que quer.]</p>
     <div class="signature">Com amor, Mari</div>
   </div>
 </div>
