--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   * { margin:0; padding:0; box-sizing:border-box; font-family:'Arial',sans-serif; scroll-behavior:smooth; }
   body { background:#111; color:#fff; overflow-x:hidden; }
 
-  /* Fundo animado de partículas/corações */
+  /* Fundo animado */
   #particles { position:fixed; top:0; left:0; width:100%; height:100%; z-index:0; pointer-events:none; }
 
   /* Hero */
@@ -20,8 +20,8 @@
   /* Carrossel */
   .carousel { width:90%; max-width:500px; margin:50px auto; position: relative; overflow:hidden; border-radius:15px; box-shadow:0 5px 20px rgba(0,0,0,0.5); z-index:1; }
   .carousel-images { display:flex; transition: transform 0.5s ease-in-out; }
-  .carousel-images img { width:100%; flex-shrink:0; border:5px solid #fff; border-radius:15px; transition:0.3s; }
-  .carousel-images img:hover { transform: scale(1.05); }
+  .carousel-images img { width:100%; flex-shrink:0; border:5px solid #fff; border-radius:15px; transition:0.5s; }
+  .carousel-images img:hover { transform: scale(1.05); filter: brightness(1.2); }
 
   /* Seções */
   section { padding:80px 20px; text-align:center; position:relative; z-index:1; }
@@ -29,15 +29,20 @@
   section p { font-size:1.2rem; line-height:1.5; max-width:600px; margin:0 auto; }
 
   /* Botão surpresa */
-  .surprise-btn { padding:15px 30px; background:#fff; color:#ff0055; border:none; border-radius:12px; font-size:1.3rem; cursor:pointer; transition:0.3s; margin-top:30px; box-shadow:0 5px 15px rgba(0,0,0,0.5); }
-  .surprise-btn:hover { background:#ff0055; color:#fff; transform: scale(1.1); }
+  .surprise-btn { padding:15px 30px; background:#fff; color:#ff0055; border:none; border-radius:12px; font-size:1.3rem; cursor:pointer; transition:0.3s; margin-top:30px; box-shadow:0 5px 15px rgba(255,0,85,0.5); }
+  .surprise-btn:hover { background:#ff0055; color:#fff; transform: scale(1.1); box-shadow:0 5px 20px rgba(255,0,85,1); }
+
+  /* Popup surpresa */
+  #popup { display:none; position:fixed; top:50%; left:50%; transform:translate(-50%,-50%); background:#222; padding:30px; border-radius:15px; box-shadow:0 5px 30px rgba(255,0,85,0.7); z-index:10; text-align:center; }
+  #popup button { margin-top:20px; padding:10px 20px; background:#ff0055; color:#fff; border:none; border-radius:8px; cursor:pointer; transition:0.3s; }
+  #popup button:hover { background:#fff; color:#ff0055; }
 
   /* Fade-in */
   .fade-in { opacity:0; transform: translateY(30px); transition: opacity 1s ease, transform 1s ease; }
   .fade-in.show { opacity:1; transform: translateY(0); }
 
-  /* Footer */
   footer { padding:40px 20px; text-align:center; background:#222; position:relative; z-index:1; }
+
 </style>
 </head>
 <body>
@@ -83,8 +88,15 @@
 
 <!-- Botão surpresa -->
 <section class="fade-in">
-  <button class="surprise-btn" onclick="alert('Surpresa entregue! 🎁')">Clique aqui para seu presente 🎁</button>
+  <button class="surprise-btn" onclick="openPopup()">Clique aqui para seu presente 🎁</button>
 </section>
+
+<!-- Popup -->
+<div id="popup">
+  <h2>Surpresa! 🎁</h2>
+  <p>Prepare-se para receber seu presente especial!</p>
+  <button onclick="closePopup()">Fechar</button>
+</div>
 
 <footer class="fade-in">
   💖 Feito com amor
@@ -123,7 +135,9 @@
   window.addEventListener('resize',()=>{w=canvas.width=window.innerWidth; h=canvas.height=window.innerHeight;});
 
   const particles = [];
-  for(let i=0;i<80;i++){ particles.push({x:Math.random()*w, y:Math.random()*h, r:Math.random()*6+2, dx:(Math.random()-0.5)*2, dy:(Math.random()-0.5)*2}); }
+  for(let i=0;i<100;i++){ 
+    particles.push({x:Math.random()*w, y:Math.random()*h, r:Math.random()*6+2, dx:(Math.random()-0.5)*2, dy:(Math.random()-0.5)*2}); 
+  }
 
   function animate(){
     ctx.clearRect(0,0,w,h);
@@ -139,6 +153,11 @@
     requestAnimationFrame(animate);
   }
   animate();
+
+  // Botão surpresa popup
+  const popup = document.getElementById('popup');
+  function openPopup(){ popup.style.display='block'; }
+  function closePopup(){ popup.style.display='none'; }
 </script>
 
 </body>
