--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Surpresa</title>
 <style>
   * { margin:0; padding:0; box-sizing:border-box; font-family:'Arial',sans-serif; scroll-behavior:smooth; }
-  body { background:#111; color:#fff; overflow-x:hidden; }
+  body { background:#111; color:#fff; overflow-x:hidden; font-size:16px; }
 
   /* Fundo animado */
   #particles { position:fixed; top:0; left:0; width:100%; height:100%; z-index:0; pointer-events:none; }
@@ -43,6 +43,16 @@
 
   footer { padding:40px 20px; text-align:center; background:#222; position:relative; z-index:1; }
 
+  /* Ajustes responsivos para celular */
+  @media (max-width: 600px) {
+    body { font-size: 18px; }
+    .hero h1 { font-size: 2.5rem; }
+    section h2 { font-size: 2rem; }
+    section p { font-size: 1.4rem; }
+    .carousel { width: 95%; max-width: 100%; }
+    .carousel-images img { border: 3px solid #fff; border-radius: 10px; }
+    .surprise-btn { font-size: 1.5rem; padding: 18px 35px; }
+  }
 </style>
 </head>
 <body>
